zjazd 6.1 fixed (almost everything) - issue with @BeforeEach