@@ -17,18 +17,18 @@ public class CarStorageTest {
 
     @BeforeEach
     void setup() {
-        this.rentalService = new RentalService();
+        this.rentalService = new RentalService(rentStorage,carStorage);
         this.rentStorage = new RentStorage();
         this.carStorage = new CarStorage();
         this.car1 = new Car(12345, "Mercedes", "B220", carStandard.B, null);
         this.user1 = new User(1);
     }
-}
 
-   // @Test
-    //void doesCarAdd(){
-     //   Car carTest = new Car(1234556,"Audi","RS6",carStandard.E,null);
-      //  carStorage.addCar(carTest);
-       // assertThat(carStorage.getCarStorageList().getLast()).isEqualTo(carTest);
-   // }
-//}
+
+    @Test
+    void doesCarAdd(){
+      Car carTest = new Car(1234556,"Audi","RS6",carStandard.E,null);
+      carStorage.addCar(carTest);
+      assertThat(carStorage.getCarStorageList().get(carStorage.getCarStorageList().size()-1)).isEqualTo(carTest);
+    }
+}
